Improve warning icon alignment Bug 1046251

--- a/media/css/firefox/sync.less
+++ b/media/css/firefox/sync.less
@@ -97,17 +97,16 @@
             display: inline-block;
             font-style: italic;
             font-size: 18px;
-            padding: 0 40px;
+            padding: 0 35px;
             position: relative;
             &:before {
                 display: block;
                 position: absolute;
-                top: 50%;
+                top: 2px;
                 left: 0;
                 content: " ";
                 height: 24px;
                 width: 24px;
-                margin-top: -12px;
                 .at2x('/media/img/firefox/sync/icons.png', 234px, 70px);
                 background-position: -210px 0;
             }
